[metadata]
name = hsf-website-helpers
version = "0.0.1"
description = "Helper tools to update source files for the website"
long_description = file: README.md



[options]
packages = find:
install_requires =
    pyyaml
    colorlog
    oyaml
scripts =
    hsf_website_helpers/bin/hsf-add-training-event.py
    hsf_website_helpers/bin/hsf-reformat-training-events.py
    hsf_website_helpers/bin/hsf-update-training-profiles.py
