[metadata]
name = hsf-website-helpers
version = "0.0.1"
description = "Helper tools to update source files for the website"
long_description = file: README.md

[options]
packages = find:
install_requires =
    pyyaml
    colorlog
    oyaml
scripts =
    hsf_website_helpers/bin/hsf_add_training_event.py
    hsf_website_helpers/bin/hsf_reformat_training_events.py
    hsf_website_helpers/bin/hsf_update_training_profiles.py
